# Orbit

./: .gitignore  AGENTS.md  DATA_FLOW.md  DESIGN.md  ORBIT_AUTONOMOUS_DEV.md  ORBIT_DEV_WORKFLOW.md  README.md  add_objectives.js  debug_live.txt  debug_live2.txt  dump_all.js  dump_db.js  final_server_log.txt  final_verify.txt  migrate.js  next.config.ts  orbit_setup_guide.md  package-lock.json  package.json  pnpm-lock.yaml  startup_log.txt  tmp_check_db.js  tmp_diagnose.js  tmp_test_mcp.js  tsconfig.tsbuildinfo  verify_sqljs.txt  開発指示.md
.agents/: auditor.md
.agents/workflows/: gas-deploy.md
.obsidian/: workspace.json
data/: projects.json
gas_template/: Code.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  scan.rs
src-tauri/src/ai/: mod.rs  model_manager.rs  runner.rs
src/app/: actions.ts  globals.css  layout.tsx  page.module.css  page.tsx
src/app/api/mcp/: route.ts
src/app/projects/[id]/: page.tsx  project.module.css
src/app/settings/: page.tsx
src/components/: ConsoleViewer.tsx  OrbitalToolkit.tsx
src/context/: ToastContext.tsx
src/lib/: android.ts  db.ts  gas.ts  governance.ts
src/lib/mcp/: governance.ts  tools.ts
src/lib/models/: types.ts
src/lib/repositories/: AiRepository.ts  GitRepository.ts  KnowledgeRepository.ts  LogRepository.ts  ProjectRepository.ts  RequirementRepository.ts  SettingRepository.ts
src/lib/services/: BreakthroughManager.ts  SearchEngine.ts
src/viewmodels/: HomeViewModel.ts  ProjectDetailViewModel.ts
(+1 files in other folders)
